# rang23-24

./: .gitignore  README.md  imu_test.ino
0OLDBROKENCODE/PID/basic_PID/: basic_PID.ino
0OLDBROKENCODE/arduino-com-OLD/: UDP-MEssage.py  controlfeedback.py  pyproject.toml  servercomb.py
0OLDBROKENCODE/udp-old/udpServer-ethercard/: udpServer-ethercard.ino
0OLDBROKENCODE/usbip/: computer.sh  computersetup.sh
Float copy/esp-twoway-controller/: esp-twoway-controller.ino
Float copy/esp-twoway-float/: esp-twoway-float.ino
Float copy/espmac/: espmac.ino
Float/esp-twoway-controller/: esp-twoway-controller.ino
Float/esp-twoway-float/: esp-twoway-float.ino
Float/espmac/: espmac.ino
Float/pythondata/: main.py  pyproject.toml
GUI/: package.json  pnpm-lock.yaml
GUI/src/: App.tsx  main.tsx
GUI/src/layout/: Header.tsx  Nav.tsx  index.tsx
PID-Autotune/: PID-Autotune.ino
UDP-Comm/: UDP-Com.ino  UDP-Comm.ino
UDP-NEW/: UDP-NEW.ino
UDPSendReceiveString/: UDPSendReceiveString.ino
arduino-com/: UDP-MEssage.py  message.py  pyproject.toml  server.py
arduino-com-OLD/: UDP-MEssage.py  main copy.py  server copy.py
camStream/: setup.sh  stream.sh
control-server/: fakedata.csv  getIP.py  getPID.py  pinkRegion.py  plot.py  plotdepth.py  power.csv  power_comp.py  pygame_controller.py  pyproject.toml  send.txt  server.py  tab.csv
imu_test/: imu_test.ino
measure_object_size/: measue2.py  measure.py  measure_object_size.py  pyproject.toml  strech.py
piScripts/: picam.sh  piold  pisetup.sh  usbip.sh
pid_v2/pid_v2/: pid_v2.ino
udp-old/UDP-NEW/: UDP-NEW.ino
udp-server/: udp-server.ino  udp-serverpid.ino
udp-serverpid/: udp-serverpid copy.txt  udp-serverpid.ino
udpServer/: udpServer.ino
viewcam/: bobp.sh  piSSh.sh  pinger.sh  pyproject.toml  record.py  runstream.sh  tmuxify.sh  view flask copy.py  view flask.py  view-errorTolerant.py  view.py  view_flask.py  viewtest.py  viewudp.py
workingPID/: workingPID.ino
