[tool.poetry]
name = "arduino-com"
version = "0.1.0"
description = ""
authors = ["amaheshwari01 <acoding2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
serial = "^0.0.97"
flask = "^3.0.0"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
