[tool.poetry]
name = "viewcam"
version = "0.1.0"
description = ""
authors = ["amaheshwari01 <acoding2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
flask = "^3.0.0"
requests = "^2.31.0"
flask-opencv-streamer = "^1.4"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
