[tool.poetry]
name = "pythondata"
version = "0.1.0"
description = ""
authors = ["amaheshwari01 <acoding2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
serial = "^0.0.97"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
